deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-dashboard
  labels:
    name: project-dashboard
